[gd_scene load_steps=4 format=3 uid="uid://cilsffwd5w120"]

[ext_resource type="Script" uid="uid://btb050p5vhv2f" path="res://scripts/settings.gd" id="1_r6d6q"]
[ext_resource type="FontFile" uid="uid://dcrs5fdgweq10" path="res://assets/fonts/m5x7.ttf" id="2_6wm04"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ln24"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.14117648, 0.14117648, 0.14117648, 0.92156863)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_r6d6q")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
custom_minimum_size = Vector2(300, 250)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8ln24")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Header" type="HBoxContainer" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="SettingsLabel" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_6wm04")
theme_override_font_sizes/font_size = 40
text = "Settings"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("2_6wm04")
theme_override_font_sizes/font_size = 40
text = "Back"

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 12
columns = 2

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_6wm04")
theme_override_font_sizes/font_size = 32
text = "Points 2 Win"

[node name="Points2WinSpinBox" type="SpinBox" parent="CanvasLayer/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
min_value = 1.0
value = 1.0
alignment = 1

[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/Header/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="CanvasLayer/PanelContainer/VBoxContainer/GridContainer/Points2WinSpinBox" to="." method="_on_points_2_win_spin_box_value_changed"]
